--- a/style.css
+++ b/style.css
@@ -1,68 +1,111 @@
-/* Effet de couleur de fond */
-body {
-  background-color: #fcf5e5;
-}
-
-/* Effet de titre */
-h1 {
-  font-size: 4rem;
+/* Styles pour l'en-tête */
+header {
+  background: linear-gradient(45deg, #ff3366, #ffcc33);
+  padding: 2em;
   text-align: center;
-  text-transform: uppercase;
-  color: #8b4513;
 }
 
-/* Effet de table */
+h1 {
+  font-size: 3em;
+  color: white;
+  margin: 0;
+}
+
+/* Styles pour la section chronologie */
+section {
+  background-color: #f2f2f2;
+  padding: 2em;
+}
+
+h2 {
+  font-size: 2em;
+  color: #333;
+  margin: 0;
+}
+
+.timeline {
+  margin-top: 2em;
+}
+
 table {
-  border-collapse: collapse;
   width: 100%;
-  margin-top: 2rem;
+  border-collapse: collapse;
+  background: #dbc3b0;
+  outline: 1px solid #000;
 }
 
-/* Effet de bordure des cellules */
-td,
 th {
-  border: 1px solid #8b4513;
-  padding: 0.5rem;
+  background-color: #f9f9f9;
+  text-align: left;
+  padding: 1em;
+  outline: 1px solid #000;
 }
 
-/* Effet de couleur de texte */
-span {
-  color: #8b4513;
+td {
+  padding: 1em;
+  outline: 1px solid #000;
 }
 
-/* Effet de taille de police */
-td:first-child p span,
-td:first-child span {
-  font-size: 2rem;
+.espece-cell {
+  width: 8em;
+  height: 2em;
+  background: linear-gradient(45deg, #ff3366, #ffcc33);
+  outline: 1px solid #000;
 }
 
-/* Effet de rotation */
-td:first-child p span {
-  display: inline-block;
-  transform: rotate(-10deg);
+th,
+td {
+  font-size: 1.2em;
+}
+select {
+  font-size: 1.3em;
+  border-radius: 1em;
+  padding: 0.5em;
 }
 
-/* Effet d'ombre portée */
-td:first-child p span {
-  box-shadow: 4px 4px 4px #888888;
+#animal-info {
+  position: fixed;
+  top: 0;
+  right: -100%; /* Modifier cette valeur pour ajuster la position initiale */
+  width: 100%;
+  height: 100%;
+  background-color: #f1f1f1;
+  transition: right 0.3s ease-in-out;
+  overflow-y: auto; /* Permettre le défilement vertical si nécessaire */
+  padding: 1em; /* Ajouter un espace autour du contenu */
+  box-sizing: border-box; /* Inclure le padding dans la largeur et la hauteur */
 }
 
-/* Effet de dégradé */
-th span {
-  background: linear-gradient(to bottom, #ffffff 0%, #ffe6cc 100%);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
+#animal-info.open {
+  right: 0;
 }
 
-/* Effet de mise en évidence de cellule */
-td:nth-child(2) span,
-td:nth-child(3) span,
-td:nth-child(4) span,
-td:nth-child(5) span {
-  font-weight: bold;
+#canvas {
+  font-size: 2em;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
 }
 
-/* Effet de surbrillance au survol */
-td:hover {
-  background-color: #ffe6cc;
+#close-button {
+  background-color: #e41b1b;
+  top: 1em;
+  right: 1em;
+  width: 3em;
+  height: 3em;
+}
+
+.time-info {
+  color: #ffffff;
+  background-color: #000000;
+  padding: 0.2em;
+  border-radius: 3px;
+}
+
+.description {
+  color: #0e530e;
+  margin: 1em;
 }
