--- a/style.css
+++ b/style.css
@@ -33,6 +33,10 @@ table {
   background: #dbc3b0;
   outline: 1px solid #000;
 }
+.sticky-header {
+  position: sticky;
+  top: 0;
+}
 
 th {
   background-color: #f9f9f9;
@@ -62,40 +66,50 @@ select {
   border-radius: 1em;
   padding: 0.5em;
 }
+img {
+  height: 10em;
+  font-weight: 10em;
+}
 
 #animal-info {
+  display: none;
   position: fixed;
   top: 0;
-  right: -100%; /* Modifier cette valeur pour ajuster la position initiale */
+  left: 0;
   width: 100%;
   height: 100%;
-  background-color: #f1f1f1;
-  transition: right 0.3s ease-in-out;
-  overflow-y: auto; /* Permettre le défilement vertical si nécessaire */
-  padding: 1em; /* Ajouter un espace autour du contenu */
-  box-sizing: border-box; /* Inclure le padding dans la largeur et la hauteur */
+  background-color: rgba(0, 0, 0, 0.7);
+  z-index: 999;
 }
 
-#animal-info.open {
-  right: 0;
-}
-
-#canvas {
-  font-size: 2em;
+.modal-content {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  width: 100%;
-  height: 100%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  max-width: 80%;
+  max-height: 80%;
+  overflow-y: auto;
+  background-color: #fff;
+  padding: 1em;
+  box-sizing: border-box;
 }
 
 #close-button {
+  position: absolute;
+  top: 0.5em;
+  right: 0.5em;
   background-color: #e41b1b;
-  top: 1em;
-  right: 1em;
-  width: 3em;
-  height: 3em;
+  color: #fff;
+  border: none;
+  width: 2em;
+  height: 2em;
+  font-size: 1.5em;
+  cursor: pointer;
 }
 
 .time-info {
@@ -108,4 +122,5 @@ select {
 .description {
   color: #0e530e;
   margin: 1em;
+  font-size: 1.3em;
 }
