--- a/style.css
+++ b/style.css
@@ -61,9 +61,9 @@ td {
   font-size: 1.2em;
 }
 select {
-  font-size: 1.3em;
-  border-radius: 0.2em;
-  padding: 0.5em;
+  font-size: 1.1em;
+  border-radius: 1em;
+  padding: 0.3em;
 }
 img {
   height: 15em;
@@ -91,9 +91,9 @@ img {
   left: 50%;
   transform: translate(-50%, -50%);
   max-width: 80%;
-  max-height: 80%;
   overflow-y: auto;
-  background-color: #fff;
+  background-color: #ffffff;
+  border-radius: 20px;
   padding: 1em;
   box-sizing: border-box;
 }
