--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+body {
+  overflow-x: hidden;
+  width: 100vw;
+}
+
 /* Styles pour l'en-tête */
 header {
   background: linear-gradient(45deg, #ff3366, #ffcc33);
